separate files, export/import, react, webpack

--- a/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
+++ b/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.js" />
+    <Content Include="Scripts\Card.js" />
     <Content Include="webpack.config.js" />
     <Content Include="packages.config" />
     <Content Include="package.json" />
