--- a/aspnet-webapi-signalr-cards/packages.config
+++ b/aspnet-webapi-signalr-cards/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="jQuery" version="1.6.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net452" />
@@ -15,6 +16,11 @@
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
