--- a/aspnet-webapi-signalr-cards/packages.config
+++ b/aspnet-webapi-signalr-cards/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="jQuery" version="1.6.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net452" />
@@ -17,4 +18,8 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net452" />
 </packages>
