--- a/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
+++ b/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
@@ -180,6 +180,7 @@
     <Content Include="Images\hearts.svg" />
     <Content Include="Images\spades.svg" />
     <Content Include="index.js" />
+    <Content Include="Scripts\Deck.js" />
     <Content Include="Scripts\Card.js" />
     <Content Include="Scripts\ChatWindow.js" />
     <Content Include="Styles\main.css" />
@@ -202,14 +203,16 @@
     <Content Include="Scripts\jquery-1.6.4.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="CardsContext.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Controllers\DecksController.cs" />
     <Compile Include="Controllers\CardsController.cs" />
-    <Compile Include="DBContext.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Models\Deck.cs" />
     <Compile Include="Models\Card.cs" />
