--- a/aspnet-webapi-signalr-cards/package.json
+++ b/aspnet-webapi-signalr-cards/package.json
@@ -9,6 +9,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.22.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "webpack": "^2.2.1"
   },
   "dependencies": {
@@ -21,5 +23,9 @@
   "scripts": {
     "build": "webpack"
   },
-  "-vs-binding": { "AfterBuild": [ "build" ] }
+  "-vs-binding": {
+    "AfterBuild": [
+      "build"
+    ]
+  }
 }
