--- a/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
+++ b/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\Deck.cs" />
     <Compile Include="Models\Hand.cs" />
+    <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
