--- a/game-app-server/game-app-server.csproj
+++ b/game-app-server/game-app-server.csproj
@@ -174,6 +174,7 @@
     <Content Include="Images\diamonds.svg" />
     <Content Include="Images\hearts.svg" />
     <Content Include="Images\spades.svg" />
+    <Content Include="Scripts\Lobby.js" />
     <Content Include="webpack.config.js" />
     <Content Include="package.json" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
@@ -191,16 +192,28 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\aspnet-webapi-signalr-cards\Models\Card.cs">
+      <Link>Models\Card.cs</Link>
+    </Compile>
+    <Compile Include="..\aspnet-webapi-signalr-cards\Models\Deck.cs">
+      <Link>Models\Deck.cs</Link>
+    </Compile>
+    <Compile Include="..\aspnet-webapi-signalr-cards\Models\Game.cs">
+      <Link>Models\Game.cs</Link>
+    </Compile>
+    <Compile Include="..\aspnet-webapi-signalr-cards\Models\Hand.cs">
+      <Link>Models\Hand.cs</Link>
+    </Compile>
+    <Compile Include="..\aspnet-webapi-signalr-cards\Models\Player.cs">
+      <Link>Models\Player.cs</Link>
+    </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\LobbyHub.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Hubs\GameHub.cs" />
-    <Compile Include="Models\Card.cs" />
-    <Compile Include="Models\Deck.cs" />
-    <Compile Include="Models\Hand.cs" />
-    <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
