--- a/game-app-server/package.json
+++ b/game-app-server/package.json
@@ -14,11 +14,12 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "axios": "^0.16.2"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.2.0"
   },
   "scripts": {
     "build": "webpack"
