--- a/game-app-server/game-app-server.csproj
+++ b/game-app-server/game-app-server.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Hubs\LobbyHub.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Hubs\GameHub.cs" />
+    <Compile Include="Models\Lobby.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
