--- a/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
+++ b/aspnet-webapi-signalr-cards/aspnet-webapi-signalr-cards.csproj
@@ -132,11 +132,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="CardsContext.cs" />
+    <Compile Include="DbAppContextManager.cs" />
     <Compile Include="Controllers\LobbiesController.cs" />
     <Compile Include="Controllers\DecksController.cs" />
     <Compile Include="Controllers\CardsController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
+    <Compile Include="Migrations\Initialize.cs" />
+    <Compile Include="Models\Migration.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\Deck.cs" />
     <Compile Include="Models\Hand.cs" />
